--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solana-wallet-tracker",
+  "name": "tokenvault",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
+    "ethers": "^5.7.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
