🚀 FIXED: Implement proven dual deployment approach
- Add separate build scripts: build:vercel (/) and build:github (/tokenVault/)
- Simplify vite.config.js (remove unreliable env detection)
- Update GitHub Actions to use build:github script
- Update Vercel config to use build:vercel script
- Add manual code splitting to reduce bundle size
- Same approach that works for subhajit project

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       run: npm ci
       
     - name: Build
-      run: GITHUB_PAGES=true npm run build
+      run: npm run build:github
       
     - name: Setup Pages
       uses: actions/configure-pages@v4
